Backport of master to backport-4 branch